# dear-imgui-unity

./: .clang-format  .gitignore  README.md
ImGuiUnityProject/: imgui.ini
ImGuiUnityProject/Assets/ImGui/: ImGui.shader
ImGuiUnityProject/Assets/Scenes/: ImguTester.cs  SampleScene.unity  SampleSceneSettings.lighting
ImGuiUnityProject/ProjectSettings/: ProjectSettings.asset
Plugin/: CMakeLists.txt
Plugin/csharp/: CMakeLists.txt
Plugin/csharp/UnityScripts/: ComputeBufferPinned.cs  ImGuiRenderer.cs  PinnedArray.cs
Plugin/include/: PlatformBase.h  plugin.h
Plugin/src/: RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderingPlugin.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  plugin.cpp
